# Tikz-Python

./: .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  README.md  hobby.py  index.html  mkdocs.yml  objects.inv  path_methods.py  pyproject.toml  requirements.txt  setup.cfg  tikz-code.tex  tikz_methods.py
API_Documentation/arc/: index.html
API_Documentation/circle/: index.html
API_Documentation/ellipse/: index.html
API_Documentation/line/: index.html
API_Documentation/node/: index.html
API_Documentation/plot_coordinates/: index.html
docs/: examples.md  index.md  installation.md  tikz_picture.md  tutorials.md
examples/: _run_all_examples.sh  barycentric.py  blowup.py  cauchy_residue_thm.py  cauchy_residue_thm_arc.py  circles.py  code.tex  controls.py  index.html  intersections.py  lorenz.py  my_tikz_code.tex  roots-of-unity.py  rotate_circles.py  rotate_plot.py  serpinski_triangles.py  shift_plot.py  sphere.py  sphere_loop.py  tikz-code.tex  tikz_code.tex
installation/: index.html
misc/: xcolors_dvipsnames.txt
search/: search_index.json
stylesheets/: extra.css
template/: tex_file.tex
tests/: arc_test.py  braids.py  hermite_spline.py  integrate_and_plot.py  intersections_scope_clip.py  line_control_pts_test.py  plot_test.py  run_test.sh  scope_clip.py  test.py  test_action_arg.py  test_add_node.py  test_attribute_assignment.py  test_class_constructors.py  test_code_update.py  test_file_creation.py  test_helpler_funcs.py  test_tikz_picture.py  test_transformations.py
tex/: __latexindent_temp.tex  test-pytikz.tex
tikz_code/: __latexindent_temp.tex  tikz-code.tex
tikz_picture/: index.html
tikz_py/: __init__.py  arc.py  circle.py  clip.py  drawing_object.py  ellipse.py  line.py  node.py  plotcoordinates.py  rectangle.py  scope.py  tikz_command.py  tikz_picture.py  transformations.py  utils.py
tikzpy/: __init__.py  arc.py  circle.py  drawing_object.py  ellipse.py  line.py  node.py  plotcoordinates.py  rectangle.py  scope.py  tikz_picture.py  utils.py
tutorials/: index.html
(+180 files in other folders)
