[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tikzpy"
version = "0.0.1"
authors = [
  { name="Luke Trujillo", email="ltrujillo@hmc.edu" },
]
description = "A python wrapper for tikz"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


