[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tikz_python"
version = "0.0.5"
authors = [
  { name="Luke Trujillo", email="ltrujillo@hmc.edu" },
]
description = "A python wrapper for tikz"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.ruff]
ignore-init-module-imports = true
[project.urls]
"Homepage" = "https://github.com/ltrujello/Tikz-Python/"
"Documentation" = "https://ltrujello.github.io/Tikz-Python/"
