[metadata]
name = tikzpy
version = 0.0.1
author = Luke Trujillo
url = https://github.com/ltrujello/Tikz-Python
license = MIT
long_description = file: README.md

[options]
include_package_data = true
python_requires = >= 3.7
install_requires =
    numpy
    pytest-order
packages = 
    tikzpy
    tikzpy.colors
    tikzpy.drawing_objects
    tikzpy.styles
    tikzpy.tikz_environments
    tikzpy.templates
    tikzpy.utils

